name:                pikatock
version:             0.1.0.0
synopsis:            Tiny time tracking.
-- description:
license:             PublicDomain
author:              sjc
maintainer:          scolej
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable pikatock
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10, time >=1.6 && <1.7, containers >=0.5 && <0.6, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010
