name:                pikatock
version:             0.1.0.0
synopsis:            Tiny time tracking.
license:             PublicDomain
author:              scolej
maintainer:          scolej
build-type:          Simple
cabal-version:       >=1.10

executable pikatock
  main-is:             Main.hs
  build-depends:       base >=4.9 && <4.10, time >=1.6 && <1.7, containers >=0.5 && <0.6, parsec >=3.1 && <3.2
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite tests
    build-depends:    base >=4.9 && <4.10,
                      time >=1.6 && <1.7,
                      containers >=0.5 && <0.6,
                      parsec >=3.1 && <3.2,
                      HUnit >= 1.5.0.0,
                      test-framework,
                      test-framework-hunit
    default-language: Haskell2010
    hs-source-dirs:   src, test
    main-is:          TestMain.hs
    type:             exitcode-stdio-1.0
